Fix regular logo visibility when there's no white logo set

--- a/packages/headline/assets/css/screen.css
+++ b/packages/headline/assets/css/screen.css
@@ -30,7 +30,7 @@ body:not(.is-head-transparent) .gh-head-logo img + img {
     display: none;
 }
 
-.is-head-transparent .gh-head-logo img:first-of-type {
+.is-head-transparent .gh-head-logo img:first-of-type:not(:only-child) {
     display: none;
 }
 
